--- a/.github/workflows/scan-build.yml
+++ b/.github/workflows/scan-build.yml
@@ -15,7 +15,7 @@ jobs:
     container: ubuntu:23.04
     steps:
       - name: Cache scan-build
-        uses: actions/cache@v3.3.1
+        uses: actions/cache@13aacd865c20de90d75de3b17ebe84f7a17d57d2
         with:
           path: ~/.cargo
           key: scan-build
