--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -85,7 +85,7 @@ jobs:
       # My patience simply ran too short to keep on looking. See follow-on
       # action to manually fix this up.
       - name: Checkout - might be merge commit!
-        uses: actions/checkout@v3.5.3
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
         with:
           fetch-depth: 0
         # Use last commit of branch, not potential merge commit!
