--- a/.github/workflows/scan-build.yml
+++ b/.github/workflows/scan-build.yml
@@ -62,7 +62,7 @@ jobs:
                 software-properties-common \
                 zlib1g \
                 zlib1g-dev
-      - uses: actions/checkout@v3.5.3
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
       - run: ./scripts/bundle.sh
       - run: ./autogen.sh
       - run: scan-build-16 ./configure --enable-dpdk --enable-nfqueue --enable-nflog
