--- a/.github/workflows/authors.yml
+++ b/.github/workflows/authors.yml
@@ -3,6 +3,10 @@ name: New Authors Check
 on:
   pull_request:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   check-id:
     name: New Author Check
