libsuricata: move suricata-interface into user application
As suricata-interface.{c,h} was not being used by Suricata itself yet,
its a sign that it might be too specific to the user app.

So move now, to minimmize the change to Suricata proper.

--- a/examples/suricata_lib/Makefile.am
+++ b/examples/suricata_lib/Makefile.am
@@ -3,7 +3,9 @@ bin_PROGRAMS = suricata_client
 # Set the include path.
 AM_CPPFLAGS = -I$(top_srcdir)/src
 
-suricata_client_SOURCES = main.c
+noinst_HEADERS = suricata-interface.h
+
+suricata_client_SOURCES = main.c suricata-interface.c
 
 # The library search path.
 suricata_client_LDFLAGS = $(all_libraries) ${SECLDFLAGS}
