--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -852,7 +852,7 @@ jobs:
       - run: CC="clang" CFLAGS="$DEFAULT_CFLAGS -Wshadow" ./configure --disable-shared  --enable-coccinelle
       - name: Running unit tests and cocci checks
         # Set the concurrency level for cocci.
-        run: CONCURRENCY_LEVEL=2 make check
+        run: CONCURRENCY_LEVEL=${{ env.CPUS }} make check
       - run: make distclean
       - run: CC="clang" CFLAGS="$DEFAULT_CFLAGS -Wshadow -fsanitize=address -fno-omit-frame-pointer" ./configure --enable-debug --enable-unittests --disable-shared --enable-rust-strict --enable-hiredis --enable-nfqueue --enable-lua
         env:
