util/interval-tree: add utility fns
Add new utility files to deal with the interval trees. These cover the
basic ops:
1. Creation/Destruction of the tree
2. Creation/Destruction of the nodes

It also adds the support for finding overlaps for a given set of ports.
This function is used by the detection engine is the Stage 2 of
signature preparation.

Ticket 6792

Co-authored-by: Victor Julien <vjulien@oisf.net>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -626,6 +626,7 @@ noinst_HEADERS = \
 	util-validate.h \
 	util-var.h \
 	util-var-name.h \
+	util-interval-tree.h \
 	win32-misc.h \
 	win32-service.h \
 	win32-syscall.h \
@@ -1235,6 +1236,7 @@ libsuricata_c_a_SOURCES = \
 	util-unittest-helper.c \
 	util-var.c \
 	util-var-name.c \
+	util-interval-tree.c \
 	win32-misc.c \
 	win32-service.c \
 	win32-syscall.c
