examples/lib: work with bundled libhtp
The simple example Makefile.am was unconditionally including
$(HTP_LDADD) which might be empty resulting in "../.." ending up in the
Makefile causing the build to fail.

Instead, also make HTP_LDADD a conditional, so we can only include it
when actually set, and its only set when libhtp is bundled.

The reason this Makefile needs to include the path components "../.."
is because the HTP_LDADD value is relative to the top level "src/"
directory.

--- a/configure.ac
+++ b/configure.ac
@@ -1660,6 +1660,7 @@
         fi
     fi
 
+    AM_CONDITIONAL([HTP_LDADD], [test "x${HTP_LDADD}" != "x"])
 
   # Check for libcap-ng
     case $host in
