--- a/rust/Cargo.toml.in
+++ b/rust/Cargo.toml.in
@@ -39,7 +39,7 @@ hkdf = "~0.12.3"
 aes = "~0.7.5"
 aes-gcm = "~0.9.4"
 
-der-parser = "~8.2.0"
+der-parser = "~9"
 kerberos-parser = { version = "~0.7.1", default_features = false }
 
 # Kerberos parsing still depends on der-parser 6.0.1.
@@ -51,7 +51,7 @@ ntp-parser = "~0.6.0"
 ipsec-parser = "~0.7.0"
 snmp-parser = "~0.9.0"
 tls-parser = "~0.11.0"
-x509-parser = "~0.15.0"
+x509-parser = "~0.16.0"
 libc = "~0.2.82"
 sha2 = "~0.10.2"
 digest = "~0.10.3"
@@ -63,9 +63,8 @@ base64 = "~0.13.0"
 bendy = { version = "~0.3.3", default-features = false }
 asn1-rs = { version = "~0.5.2" }
 
-# The time crate has a policy of supporting Rust versions up to 6
-# month olds, so it needs to be pinned even at the patch level.
-time = "=0.3.13"
+# time has aggressive MSRV policy, so lock to known working version
+time = "=0.3.34"
 
 suricata-derive = { path = "./derive" }
 
