--- a/rust/Cargo.toml.in
+++ b/rust/Cargo.toml.in
@@ -63,8 +63,8 @@ base64 = "~0.13.0"
 bendy = { version = "~0.3.3", default-features = false }
 asn1-rs = { version = "~0.6.1" }
 
-# time has aggressive MSRV policy, so lock to known working version
-time = "=0.3.34"
+# last version to work with MSRV 1.63
+time = "=0.3.20"
 
 suricata-derive = { path = "./derive" }
 
